# OTIS-2024

./: .gitignore  e  readme.md
src/: CMakeLists.txt  Source1.cpp
tasks/: OTIS-2024 - Ярлык.lnk
trunk/II-230284/task_01/src/: CMakeLists.txt
trunk/II-230284/task_02/src/: CMakeLists.txt
trunk/II02513/task_02/doc/: readme.md
trunk/II02513/task_02/src/: CMakeLists.txt
trunk/II02513/task_03/doc/: readme (1).md
trunk/II02513/task_03/src/: CMakeLists.txt
trunk/II02513/task_04/doc/: report.md
trunk/ii00230304/task3/doc/: readme.md
trunk/ii00230304/task3/src/: lab3.cpp
trunk/ii00230308/task3/src/: GraphApp.cpp
trunk/ii002509/task_01/doc/: report.md
trunk/ii002509/task_01/src/: CMakeLists.txt  Otis 1.cpp  Otis1.cpp  hfhg.cpp
trunk/ii002509/task_02/src/: CMakeLists.txt  task_02.cpp
trunk/ii002517/task_01/: Readme.md
trunk/ii002517/task_02/: Readme.md  lab02.cpp
trunk/ii002517/task_03/: lab03.cpp
trunk/ii002517/task_04/: Readme.md
trunk/ii002615/task_01/doc/: Readme.md.txt  readme.md
trunk/ii002615/task_01/src/: 1labasOTIS.cpp  Source1.cpp
trunk/ii023/src/: CMakeLists.txt
trunk/ii0230276/task_02/src/: Source.cpp
trunk/ii0230276/task_03/src/: CMakeLists.txt
trunk/ii02507/src/: CMakeLists.txt
trunk/ii02508/src/: CMakeLists.txt
trunk/ii02520/lab_03/: README.md
trunk/ii02602/task_05/: readme.md
trunk/ii02618/task_03/src/: CMakeLists.txt
trunk/ii02622/otis 1 laba/: otis 1 laba.sln
trunk/ii230278/task_02/: readme.md
trunk/ii230286/task2/: readme.rtf
trunk/task_02/doc/: readme.md
trunk/task_02/src/: CMakeLists.txt  task_02.cpp
(+207 files in other folders)
